fixed: black bar from appearing - truncate

--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,7 @@
 /* arrow indicator */
 html {
   height: 190%;
+  overflow-x: hidden;
 }
 
 body {
